test(InspectionMethod): added validations unit tests